erDiagram
  TENANTS ||--o{ PAYMENT_TRANSACTIONS : payments
  VENDORS ||--o{ PAYMENT_TRANSACTIONS : to_vendor
  TENANTS ||--o{ PAYMENT_REFUNDS : refunds
  PAYMENT_TRANSACTIONS ||--o{ PAYMENT_REFUNDS : refund_of
  TENANTS ||--o{ PAYMENT_ADJUSTMENTS : adjustments
  PAYMENT_TRANSACTIONS ||--o{ PAYMENT_ADJUSTMENTS : adjusts
  TENANTS ||--o{ CUSTOMERS : payment_profiles
  TENANTS ||--o{ PAYMENT_INTENTS : intents
  TRADE_ACCOUNTS ||--o{ PAYMENT_INTENTS : may_cover
  TENANTS ||--o{ TRADE_ACCOUNTS : has_trade
  TENANTS ||--o{ PAYMENT_WEBHOOKS : webhook_events


